<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="@dimen/question_padding"
            android:text="@string/question_one"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/questionOneGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answer_margin_bottom"
            android:layout_marginTop="@dimen/answer_margin_top"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/pressure_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_one_pressure" />

            <RadioButton
                android:id="@+id/eardrum_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_one_eardrum" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="@dimen/question_padding"
            android:text="@string/question_two"
            android:textColor="@android:color/black" />


        <EditText
            android:id="@+id/gas_editText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/answer_margin_bottom"
            android:layout_marginTop="@dimen/answer_margin_top"
            android:layout_weight="3"
            android:hint="@string/hint_question_two" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="@dimen/question_padding"
            android:text="@string/question_three"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/back_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/answer_margin_top"
            android:text="@string/answer_three_back" />

        <CheckBox
            android:id="@+id/not_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_three_not" />

        <CheckBox
            android:id="@+id/nothing_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_three_without" />

        <CheckBox
            android:id="@+id/front_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answer_margin_bottom"
            android:text="@string/answer_three_front" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="@dimen/question_padding"
            android:text="@string/question_four"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/questionFourGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answer_margin_bottom"
            android:layout_marginTop="@dimen/answer_margin_top"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/eight_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_four_8" />

            <RadioButton
                android:id="@+id/ten_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_four_10" />

            <RadioButton
                android:id="@+id/twelve_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_four_12" />

            <RadioButton
                android:id="@+id/fourteen_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_four_14" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="@dimen/question_padding"
            android:text="@string/question_five"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/questionFiveGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answer_margin_bottom"
            android:layout_marginTop="@dimen/answer_margin_top"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/brave_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_five_brave" />

            <RadioButton
                android:id="@+id/do_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_five_nothing" />

            <RadioButton
                android:id="@+id/calm_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_five_calm" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                android:layout_weight="1"
                android:onClick="SubmitAnswers"
                android:text="@string/submit_button" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                android:layout_weight="1"
                android:onClick="reset"
                android:text="@string/reset_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>